fix whitespace

--- a/packages/gamut/Markdown/styles/_mixins.scss
+++ b/packages/gamut/Markdown/styles/_mixins.scss
@@ -89,7 +89,7 @@
     border-radius: 0.125rem;
     color: $gamut-purple-900;
     background-color: mix($swatches-grey-200, $swatches-grey-100);
-    white-space: pre;
+    white-space: normal;
     vertical-align: baseline;
     font-family: $font-monospace;
     font-size: 0.9rem;
